Correcting align of menu items

--- a/public/styles.css
+++ b/public/styles.css
@@ -16,15 +16,16 @@ header {
     width: 100%;
     padding: 32px;
     text-align: center;
-
+    box-sizing: border-box;
 }
-
 .links {
     font-size: 22px;
-
 }
 
-.links a {
+.links a + a {
     margin-left: 32px;
+} 
+
+.links a {
     text-decoration: none;
 }
